--- a/public/index.html
+++ b/public/index.html
@@ -40,27 +40,27 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyACPSc1LTnsqaOWjlsazmWXUWRiw1KasuI",
-          authDomain: "breaddit-98084.firebaseapp.com",
-          projectId: "breaddit-98084",
-          storageBucket: "breaddit-98084.appspot.com",
-          messagingSenderId: "922810082575",
-          appId: "1:922810082575:web:171d310de406be922aca7a",
-          measurementId: "G-59H5FKK8YP"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-      </script>
+			// Import the functions you need from the SDKs you need
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+			import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js";
+			// TODO: Add SDKs for Firebase products that you want to use
+			// https://firebase.google.com/docs/web/setup#available-libraries
+		
+			// Your web app's Firebase configuration
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			const firebaseConfig = {
+				apiKey: "AIzaSyACPSc1LTnsqaOWjlsazmWXUWRiw1KasuI",
+				authDomain: "breaddit-98084.firebaseapp.com",
+				projectId: "breaddit-98084",
+				storageBucket: "breaddit-98084.appspot.com",
+				messagingSenderId: "922810082575",
+				appId: "1:922810082575:web:8909e86975c6fcc52aca7a",
+				measurementId: "${config.measurementId}"
+			};
+		
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+			const analytics = getAnalytics(app);
+		</script>
   </body>
 </html>
